# PhotogrammetryTasks2026

./: CMakeLists.txt  README.md
.github/scripts/: install_opencv_linux.sh
.github/scripts/linux/: install_ceres_solver.sh
.github/scripts/macos/: install_ceres_solver.sh
.github/scripts/windows/: install_ceres_solver.ps1  install_opencv.ps1
.github/workflows/: cmake.yml
libs/utils/: CMakeLists.txt
src/phg/matching/: descriptor_matcher.cpp  flann_matcher.cpp
src/phg/sfm/: fmatrix.cpp  homography.cpp  panorama_stitcher.cpp
tests/: test_matching.cpp  test_sift.cpp
